_generated-doc/3.8/config/quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config.adoc

:summaryTableId: quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_configuration]]link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-mount-path]]`link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-mount-path[quarkus.kubernetes-service-binding.mount-path]`


[.description]
--
The mountPath to add in the `ServiceBinding` resource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SERVICE_BINDING_MOUNT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SERVICE_BINDING_MOUNT_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-bind-as-files]]`link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-bind-as-files[quarkus.kubernetes-service-binding.bind-as-files]`


[.description]
--
Determines if binding should be created as files or env vars. Set this value to `false` to bind as env vars.`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SERVICE_BINDING_BIND_AS_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SERVICE_BINDING_BIND_AS_FILES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-detect-binding-resources]]`link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-detect-binding-resources[quarkus.kubernetes-service-binding.detect-binding-resources]`


[.description]
--
Detects the binding data from resources owned by the backing service.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SERVICE_BINDING_DETECT_BINDING_RESOURCES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SERVICE_BINDING_DETECT_BINDING_RESOURCES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-services-services-binding]]`link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-services-services-binding[quarkus.kubernetes-service-binding.services."services".binding]`


[.description]
--
The name of the service binding. If no value is specified the id of the service will be used instead.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SERVICE_BINDING_SERVICES__SERVICES__BINDING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SERVICE_BINDING_SERVICES__SERVICES__BINDING+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-services-services-kind]]`link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-services-services-kind[quarkus.kubernetes-service-binding.services."services".kind]`


[.description]
--
The kind of the service.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SERVICE_BINDING_SERVICES__SERVICES__KIND+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SERVICE_BINDING_SERVICES__SERVICES__KIND+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-services-services-api-version]]`link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-services-services-api-version[quarkus.kubernetes-service-binding.services."services".api-version]`


[.description]
--
The apiVersion of the service

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SERVICE_BINDING_SERVICES__SERVICES__API_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SERVICE_BINDING_SERVICES__SERVICES__API_VERSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-services-services-name]]`link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-services-services-name[quarkus.kubernetes-service-binding.services."services".name]`


[.description]
--
The name of the service. When this is empty the key of the service is meant to be used as name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SERVICE_BINDING_SERVICES__SERVICES__NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SERVICE_BINDING_SERVICES__SERVICES__NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-services-services-namespace]]`link:#quarkus-kubernetes-service-binding-kubernetes-service-binding-buildtime-kubernetes-service-binding-config_quarkus-kubernetes-service-binding-services-services-namespace[quarkus.kubernetes-service-binding.services."services".namespace]`


[.description]
--
The namespace of the service.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SERVICE_BINDING_SERVICES__SERVICES__NAMESPACE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SERVICE_BINDING_SERVICES__SERVICES__NAMESPACE+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===